2000-02-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99f

2000-02-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_mx4200.c: Remove the DOP-weighted position
	averaging code and revert to a simple mean average.  The weighted
	average consistently produced a *worse* result.  Go figure. 
	* html/mx4200data.htm: Cleanup, reflect current reality.
	* html/driver9.htm: Cleanup, reflect current reality.
	* html/copyright.htm: Cleanup, and credit where credit is due.
	From: Marc.Brett@westgeo.com
	
	* ntpd/refclock_oncore.c: Cleanup/fixes
	* html/driver30.htm: Cleanup
	* html/Oncore-SHMEM.htm: Cleanup
	From: Reg Clemens <reg@dwf.com>

2000-02-16  Sven Dietrich <sven_dietrich@trimble.com>

	* winnt/scripts/mkver.bat:    Frederick Czajka [w2k@austin.rr.com]
	  winnt/ntpq/ntpq.dsp:        modified mkver.bat to eliminate the
	  winnt/ntpd/ntpd.dsp:	      need to have Perl installed and the
	  winnt/ntpdc/ntpdc.dsp:      PERL environment variable to be set.
	  winnt/ntpdate/ntpdate.dsp:
	  winnt/ntptrace/ntptrace.dsp:    Thanks, Frederick!

	* ntpd/refclock_nmea.c: Correctly interpret the quality indicator.

2000-02-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_nmea.c: Correctly interpret the quality indicator.
	Deal with the time suppliedin centiseconds.  GPGCA/GPGGA cleanup.
	From: Andrew Hood <ajhood@fl.net.au>

	* libparse/Makefile.am (K_CFLAGS): Use instead.  Add NEED_NTP_BOPS.

2000-02-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/ntp-wait.in: Intensify, including some suggestions from
	Ulrich.

	* configure.in: 4.0.99e

	* scripts/ntp-wait.in: Lose cruft, sleep after each try.

	* scripts/ntp-restart: It's ntpd now.  Also, call ntp-wait.

	* configure.in (AC_CONFIG_*): New scripts that use PATH_PERL

	* scripts/Makefile.am (noinst_SCRIPTS): Added ntp-wait
	(noinst_SCRIPTS): Added all of the scripts that now use PATH_PERL

	* configure.in: Get the path to perl
	(AC_CONFIG_*): Added scripts/ntp-wait
